[FIX] pos: long product name break mobile UI
Steps:
- Give product name very long without image.
- Open pos in mobile view.

Issue:
- We have weird result.

Fix:
- Truncated long product names for better readability.
- Ensured all product cards have the same size.
- Fixed display issues for products without images.

Task: 4513829

--- a/addons/point_of_sale/static/src/app/generic_components/product_card/product_card.scss
+++ b/addons/point_of_sale/static/src/app/generic_components/product_card/product_card.scss
@@ -20,6 +20,22 @@
     }
 }
 
+.pos-product-card {
+    aspect-ratio: 3 / 4;
+}
+
+.pos-combo-product-card {
+    aspect-ratio: 8 / 12;    
+}
+
+.product-name-without-img {
+    aspect-ratio: 4 / 3;
+    
+    .product-name.no-image {
+        -webkit-line-clamp: 4;
+    }
+}
+
 .product-name {
 
     box-sizing: border-box;
@@ -29,7 +45,6 @@
 
     &.no-image {
         -webkit-line-clamp: 7;
-        aspect-ratio: 4 / 3;
     }
 }
 
